@@ -2978,6 +2978,7 @@ _pack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t * build_ptr, Buf buffer)
 	packstr(build_ptr->plugindir, buffer);
 	packstr(build_ptr->plugstack, buffer);
 	pack16(build_ptr->preempt_mode, buffer);
+	packstr(build_ptr->preempt_type, buffer);
 
 	pack32(build_ptr->priority_decay_hl, buffer);
 	pack16(build_ptr->priority_favor_small, buffer);
@@ -3193,8 +3194,9 @@ _unpack_slurm_ctl_conf_msg(slurm_ctl_conf_info_msg_t **
 
 	safe_unpackstr_xmalloc(&build_ptr->plugindir, &uint32_tmp, buffer);
 	safe_unpackstr_xmalloc(&build_ptr->plugstack, &uint32_tmp, buffer);
-
 	safe_unpack16(&build_ptr->preempt_mode, buffer);
+	safe_unpackstr_xmalloc(&build_ptr->preempt_type, &uint32_tmp, buffer);
+
 	safe_unpack32(&build_ptr->priority_decay_hl, buffer);
 	safe_unpack16(&build_ptr->priority_favor_small, buffer);
 	safe_unpack32(&build_ptr->priority_max_age, buffer);
