@@ -480,6 +480,7 @@ void _fill_ctld_conf(slurm_ctl_conf_t * conf_ptr)
 	conf_ptr->plugstack           = xstrdup(conf->plugstack);
 
 	conf_ptr->preempt_mode        = conf->preempt_mode;
+	conf_ptr->preempt_type        = xstrdup(conf->preempt_type);
 	conf_ptr->priority_decay_hl   = conf->priority_decay_hl;
 	conf_ptr->priority_favor_small= conf->priority_favor_small;
 	conf_ptr->priority_max_age    = conf->priority_max_age;
